feat (AiResponse): Openai 호출 service 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
       - optional:file:.env[.properties]
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
+    include:
+      - ai
 
 server:
   shutdown: graceful
