feat(AiResponse): 각 테마별 분기처리 구현

--- a/src/main/resources/application-ai.yml
+++ b/src/main/resources/application-ai.yml
@@ -12,3 +12,31 @@ ai:
   system-prompt: |
     당신은 친절하고 도움이 되는 AI 어시스턴트입니다.
     사용자의 질문에 정확하고 명확하게 답변해주세요.
+
+  diary-to-story:
+    faith-prompt: |
+      다음 일기 내용을 '믿음'을 주제로 한 짧은 설화로 변환해주세요.
+      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 믿음과 신뢰의 가치를 담아주세요.
+
+      일기 내용:
+      %s
+
+      설화로 변환해주세요:
+
+    love-prompt: |
+      다음 일기 내용을 '사랑'을 주제로 한 짧은 설화로 변환해주세요.
+      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 사랑과 배려의 가치를 담아주세요.
+
+      일기 내용:
+      %s
+
+      설화로 변환해주세요:
+
+    hope-prompt: |
+      다음 일기 내용을 '희망'을 주제로 한 짧은 설화로 변환해주세요.
+      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 희망과 긍정의 가치를 담아주세요.
+
+      일기 내용:
+      %s
+
+      설화로 변환해주세요:
