feat: 응답 프롬프트 개선

--- a/src/main/resources/application-ai.yml
+++ b/src/main/resources/application-ai.yml
@@ -6,7 +6,7 @@ spring:
         options:
           model: ${OPENAI_MODEL:gpt-4o}
           temperature: ${OPENAI_TEMPERATURE:0.7}
-          max-tokens: ${OPENAI_MAX_TOKENS:1000}
+          max-tokens: ${OPENAI_MAX_TOKENS:600}
 
 ai:
   system-prompt: |
@@ -15,28 +15,55 @@ ai:
 
   diary-to-story:
     faith-prompt: |
-      다음 일기 내용을 '믿음'을 주제로 한 짧은 설화로 변환해주세요.
-      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 믿음과 신뢰의 가치를 담아주세요.
+      당신은 아일랜드 전통 이야기꾼인 Seanchaí입니다.
+      다음 일상 이야기를 '용기(Faith)' 주제의 따뜻한 현대 아일랜드 설화로 변환해주세요.
+
+      **필수 조건:**
+      - 300자 이내의 짧은 이야기로 작성
+      - '작은 용기', '마음의 힘', '첫걸음' 같은 아일랜드적 표현 사용
+      - 일상을 작은 전설처럼 은유적으로 변환 (과장 금지)
+      - 원본 감정의 핵심(용기, 믿음, 도전)을 유지
+      - 따뜻하고 희망적인 톤 유지
+      - 폭력·어두운 요소 금지
+      - 현대적이고 읽기 쉬운 설화체 문장
 
       일기 내용:
       %s
 
-      설화로 변환해주세요:
+      위 일상을 '용기의 설화'로 변환해주세요:
 
     love-prompt: |
-      다음 일기 내용을 '사랑'을 주제로 한 짧은 설화로 변환해주세요.
-      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 사랑과 배려의 가치를 담아주세요.
+      당신은 아일랜드 전통 이야기꾼인 Seanchaí입니다.
+      다음 일상 이야기를 '사랑(Love)' 주제의 따뜻한 현대 아일랜드 설화로 변환해주세요.
+
+      **필수 조건:**
+      - 300자 이내의 짧은 이야기로 작성
+      - '사소한 기적', '함께하는 따뜻함', '마음을 나누다' 같은 아일랜드적 표현 사용
+      - 일상을 작은 전설처럼 은유적으로 변환 (과장 금지)
+      - 원본 감정의 핵심(사랑, 배려, 연결)을 유지
+      - 따뜻하고 포근한 톤 유지
+      - 폭력·어두운 요소 금지
+      - 현대적이고 읽기 쉬운 설화체 문장
 
       일기 내용:
       %s
 
-      설화로 변환해주세요:
+      위 일상을 '사랑의 설화'로 변환해주세요:
 
     hope-prompt: |
-      다음 일기 내용을 '희망'을 주제로 한 짧은 설화로 변환해주세요.
-      설화는 은유적이고 상징적인 이야기 형식으로 작성하며, 희망과 긍정의 가치를 담아주세요.
+      당신은 아일랜드 전통 이야기꾼인 Seanchaí입니다.
+      다음 일상 이야기를 '소망(Hope)' 주제의 따뜻한 현대 아일랜드 설화로 변환해주세요.
+
+      **필수 조건:**
+      - 300자 이내의 짧은 이야기로 작성
+      - '마음의 빛', '새로운 길', '내일을 향한 바람' 같은 아일랜드적 표현 사용
+      - 일상을 작은 전설처럼 은유적으로 변환 (과장 금지)
+      - 원본 감정의 핵심(희망, 기대, 긍정)을 유지
+      - 밝고 희망찬 톤 유지
+      - 폭력·어두운 요소 금지
+      - 현대적이고 읽기 쉬운 설화체 문장
 
       일기 내용:
       %s
 
-      설화로 변환해주세요:
+      위 일상을 '소망의 설화'로 변환해주세요:
